final run of autotranslate #18

--- a/django_typer/locale/af/LC_MESSAGES/django.po
+++ b/django_typer/locale/af/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,7 +51,7 @@ msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand."
 msgstr ""
-"Die luislang-invoerpad na &#39;n terugval-volledige funksie om te gebruik "
+"Die luislang-invoerpad na &#39;n terugval volledige funksie om te gebruik "
 "wanneer die voltooiingsopdrag nie &#39;n TyperCommand is nie."
 
 #: management/commands/shellcompletion.py:304
@@ -88,7 +88,7 @@ msgid ""
 "completion command is not a TyperCommand. By default, the builtin django "
 "autocomplete function is used."
 msgstr ""
-"Die luislang-invoerpad na &#39;n terugval-volledige funksie om te gebruik "
+"Die luislang-invoerpad na &#39;n terugval volledige funksie om te gebruik "
 "wanneer die voltooiingsopdrag nie &#39;n TyperCommand is nie. By verstek "
 "word die ingeboude django-outovoltooi-funksie gebruik."
 
@@ -119,7 +119,7 @@ msgid ""
 "A directory to add to the Python path, e.g. "
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
-"&#39;n Gids om by die Python-pad te voeg, bv "
+"&#39;n Gids om by die Python-pad te voeg, bv. "
 "\"/home/djangoprojects/myproject\"."
 
 #: types.py:161
