--- a/django_typer/locale/ckb/LC_MESSAGES/django.po
+++ b/django_typer/locale/ckb/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,8 +114,8 @@ msgid ""
 " used."
 msgstr ""
 "ڕێڕەوی پایتۆن بۆ مۆدیۆلی ڕێکخستنەکان، بۆ نموونە "
-"\"myproject.settings.main\". ئەگەر ئەمە دابین نەکرێت، گۆڕاوەی ژینگەی"
-" DJANGO_SETTINGS_MODULE بەکاردەهێنرێت."
+"\"myproject.settings.main\". ئەگەر ئەمە دابین نەکرا، گۆڕاوەی ژینگەی "
+"DJANGO_SETTINGS_MODULE بەکاردەهێنرێت."
 
 #: types.py:139
 msgid ""
