--- a/django_typer/locale/da/LC_MESSAGES/django.po
+++ b/django_typer/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,7 +104,7 @@ msgid ""
 "Verbosity level; 0=minimal output, 1=normal output, 2=verbose output, 3=very"
 " verbose output"
 msgstr ""
-"Spredningsniveau; 0 = minimal output, 1 = normal output, 2 = verbose output,"
+"Spørgsmålsniveau; 0 = minimal output, 1 = normal output, 2 = verbose output,"
 " 3 = meget verbose output"
 
 #: types.py:114
