--- a/django_typer/locale/de/LC_MESSAGES/django.po
+++ b/django_typer/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,8 +50,8 @@ msgid ""
 "different than the script used to invoke this command."
 msgstr ""
 "Der Name des Django-Verwaltungsskripts, für das die automatische "
-"Vervollständigung installiert werden soll, sofern er sich von dem Skript "
-"unterscheidet, das zum Aufrufen dieses Befehls verwendet wird."
+"Vervollständigung installiert werden soll, sofern er sich von dem zum "
+"Aufrufen dieses Befehls verwendeten Skript unterscheidet."
 
 #: management/commands/shellcompletion.py:291
 msgid ""
@@ -80,7 +80,7 @@ msgid ""
 "different than the script used to invoke this command."
 msgstr ""
 "Der Name des Django-Verwaltungsskripts, für das die Shell-Vervollständigung "
-"entfernt werden soll, sofern er sich von dem zum Aufrufen dieses Befehls "
+"entfernt werden soll, wenn es sich von dem zum Aufrufen dieses Befehls "
 "verwendeten Skript unterscheidet."
 
 #: management/commands/shellcompletion.py:397
