--- a/django_typer/locale/es_AR/LC_MESSAGES/django.po
+++ b/django_typer/locale/es_AR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,8 +55,8 @@ msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand."
 msgstr ""
-"La ruta de importación de Python a una función de finalización alternativa "
-"para usar cuando el comando de finalización no es un TyperCommand."
+"La ruta de importación de Python a una función completa de respaldo para "
+"usar cuando el comando de finalización no es un TyperCommand."
 
 #: management/commands/shellcompletion.py:304
 msgid "The name of the template to use for the shell completion script."
