--- a/django_typer/locale/fr/LC_MESSAGES/django.po
+++ b/django_typer/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,8 +47,8 @@ msgid ""
 "The name of the django manage script to install autocompletion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"Le nom du script de gestion Django pour lequel installer la saisie semi-"
-"automatique est différent du script utilisé pour appeler cette commande."
+"Le nom du script de gestion Django pour installer la saisie semi-automatique"
+" est différent du script utilisé pour appeler cette commande."
 
 #: management/commands/shellcompletion.py:291
 msgid ""
