--- a/django_typer/locale/fy/LC_MESSAGES/django.po
+++ b/django_typer/locale/fy/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,8 +43,8 @@ msgid ""
 "The name of the django manage script to install autocompletion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"De namme fan it django beheare skript om autofoltôging te ynstallearjen foar"
-" as oars as it skript dat brûkt wurdt om dit kommando op te roppen."
+"De namme fan it django beheare skript om autofolling te ynstallearjen foar "
+"as oars as it skript dat brûkt wurdt om dit kommando op te roppen."
 
 #: management/commands/shellcompletion.py:291
 msgid ""
