--- a/django_typer/locale/ky/LC_MESSAGES/django.po
+++ b/django_typer/locale/ky/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,8 +92,8 @@ msgid ""
 "autocomplete function is used."
 msgstr ""
 "Аяктоо буйругу TyperCommand болбогондо колдонуу үчүн кайра толук функцияга "
-"python импорттоо жолу. Демейки боюнча, курулган джанго автотолтуру функциясы"
-" колдонулат."
+"python импорттоо жолу. Демейки боюнча, орнотулган джанго автотолтуру "
+"функциясы колдонулат."
 
 #: types.py:64
 msgid "Show program's version number and exit."
