--- a/django_typer/locale/ml/LC_MESSAGES/django.po
+++ b/django_typer/locale/ml/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:36-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,7 +40,7 @@ msgstr ""
 #: management/commands/shellcompletion.py:269
 msgid "Install autocompletion for the current or given shell."
 msgstr ""
-"നിലവിലുള്ളതോ നൽകിയിരിക്കുന്നതോ ആയ ഷെല്ലിൽ ഓട്ടോകംപ്ലീഷൻ ഇൻസ്റ്റാൾ ചെയ്യുക."
+"നിലവിലുള്ളതോ നൽകിയിരിക്കുന്നതോ ആയ ഷെല്ലിന് ഓട്ടോകംപ്ലീഷൻ ഇൻസ്റ്റാൾ ചെയ്യുക."
 
 #: management/commands/shellcompletion.py:279
 msgid ""
@@ -73,9 +73,9 @@ msgid ""
 "The name of the django manage script to remove shell completion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"ഈ കമാൻഡ് ഇൻവോക്ക് ചെയ്യാൻ ഉപയോഗിച്ച സ്ക്രിപ്റ്റിൽ നിന്ന് വ്യത്യസ്തമാണെങ്കിൽ,"
-" ഷെൽ കംപ്ലീഷൻ നീക്കം ചെയ്യുന്നതിനുള്ള django മാനേജ്മെന്റ് സ്ക്രിപ്റ്റിന്റെ "
-"പേര്."
+"ഈ കമാൻഡ് പ്രവർത്തിപ്പിക്കാൻ ഉപയോഗിച്ച സ്ക്രിപ്റ്റിൽ നിന്ന് "
+"വ്യത്യസ്തമാണെങ്കിൽ, ഷെൽ കംപ്ലീഷൻ നീക്കം ചെയ്യുന്നതിനുള്ള django മാനേജ്മെന്റ്"
+" സ്ക്രിപ്റ്റിന്റെ പേര്."
 
 #: management/commands/shellcompletion.py:397
 msgid "Generate autocompletion for command string."
