--- a/django_typer/locale/mn/LC_MESSAGES/django.po
+++ b/django_typer/locale/mn/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:36-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -68,7 +68,7 @@ msgid ""
 "different than the script used to invoke this command."
 msgstr ""
 "Хэрэв энэ командыг дуудахад ашигласан скриптээс өөр бол бүрхүүлийн "
-"гүйцэтгэлийг арилгах django удирдах скриптийн нэр."
+"гүйцээлтийг арилгахын тулд django удирдах скриптийн нэр."
 
 #: management/commands/shellcompletion.py:397
 msgid "Generate autocompletion for command string."
@@ -101,7 +101,7 @@ msgid ""
 "Verbosity level; 0=minimal output, 1=normal output, 2=verbose output, 3=very"
 " verbose output"
 msgstr ""
-"Товч ярианы түвшин; 0 = хамгийн бага гаралт, 1 = хэвийн гаралт, 2 = "
+"Товч тайлбарын түвшин; 0 = хамгийн бага гаралт, 1 = хэвийн гаралт, 2 = "
 "дэлгэрэнгүй гаралт, 3 = маш дэлгэрэнгүй гаралт"
 
 #: types.py:114
