--- a/django_typer/locale/sk/LC_MESSAGES/django.po
+++ b/django_typer/locale/sk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:36-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,7 +55,7 @@ msgid ""
 "completion command is not a TyperCommand."
 msgstr ""
 "Cesta importu pythonu k záložnej kompletnej funkcii, ktorá sa má použiť, keď"
-" príkaz dokončení nie je TyperCommand."
+" príkaz na dokončenie nie je TyperCommand."
 
 #: management/commands/shellcompletion.py:304
 msgid "The name of the template to use for the shell completion script."
