--- a/django_typer/locale/eo/LC_MESSAGES/django.po
+++ b/django_typer/locale/eo/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -76,7 +76,7 @@ msgstr "Generu aŭtomatan kompleton por komanda ĉeno."
 
 #: management/commands/shellcompletion.py:405
 msgid "The command string to generate completion suggestions for."
-msgstr "La komanda ĉeno por generi kompletigajn sugestojn."
+msgstr "La komandĉeno por generi kompletigajn sugestojn por."
 
 #: management/commands/shellcompletion.py:410
 msgid "The cursor position."
