--- a/django_typer/locale/gl/LC_MESSAGES/django.po
+++ b/django_typer/locale/gl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -137,7 +137,7 @@ msgstr "Imprime as variables locais en rastrexos."
 
 #: types.py:198
 msgid "Hide local variables in tracebacks."
-msgstr "Ocultar as variables locais nos rastrexos."
+msgstr "Ocultar variables locais nos rastrexos."
 
 #: types.py:214
 msgid "Don't colorize the command output."
