--- a/django_typer/locale/lb/LC_MESSAGES/django.po
+++ b/django_typer/locale/lb/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -79,7 +79,7 @@ msgstr "Generéiere autocompletion fir Kommando String."
 
 #: management/commands/shellcompletion.py:405
 msgid "The command string to generate completion suggestions for."
-msgstr "De Kommando String fir Fäerdegstellungsvirschléi ze generéieren."
+msgstr "De Kommando String fir Ofschlossvirschléi ze generéieren."
 
 #: management/commands/shellcompletion.py:410
 msgid "The cursor position."
