--- a/django_typer/locale/os/LC_MESSAGES/django.po
+++ b/django_typer/locale/os/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:36-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,7 +34,7 @@ msgstr ""
 #: management/commands/shellcompletion.py:252
 msgid "Allow terminal formatting control sequences in completion text."
 msgstr ""
-"Бар раттын терминалы формат кæныны контролон фæдфæдыл æххæстгæнæн тексты."
+"Бар раттут терминалы формат кæныны контролон фæдфæдыл æххæстгæнæн тексты."
 
 #: management/commands/shellcompletion.py:269
 msgid "Install autocompletion for the current or given shell."
