--- a/django_typer/locale/sr/LC_MESSAGES/django.po
+++ b/django_typer/locale/sr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:29-0600\n"
+"POT-Creation-Date: 2025-02-15 15:36-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,7 +53,7 @@ msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand."
 msgstr ""
-"Путања за увоз питхон-а до резервне довршене функције која се користи када "
+"Путања за увоз питхон-а до резервне комплетне функције која се користи када "
 "команда довршавања није ТиперЦомманд."
 
 #: management/commands/shellcompletion.py:304
@@ -90,7 +90,7 @@ msgid ""
 "completion command is not a TyperCommand. By default, the builtin django "
 "autocomplete function is used."
 msgstr ""
-"Путања за увоз питхон-а до резервне довршене функције која се користи када "
+"Путања за увоз питхон-а до резервне комплетне функције која се користи када "
 "команда довршавања није ТиперЦомманд. Подразумевано се користи уграђена "
 "дјанго функција аутодовршавања."
 
